# tutanota_client

./: Cargo.toml  LICENSE  readme.md
examples/: example.rs
src/: authenticated_get.rs  create_draft.rs  create_mail_folder.rs  crypto.rs  delete_mail_folder.rs  file.rs  filedata.rs  lib.rs  mail.rs  mailbody.rs  mailbox.rs  mailboxgrouproot.rs  mailfolder.rs  move_mail.rs  protocol.rs  salt.rs  session.rs  update_mail.rs  update_mail_folder.rs  user.rs
